--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,35 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>Java_Learing_Mvn</artifactId>
+    <artifactId>com.OrangeHRM</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.2</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.9.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.qmetry/qaf -->
+        <dependency>
+            <groupId>com.qmetry</groupId>
+            <artifactId>qaf</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
